packages/errors/test/__snapshots__/CANNOT_CONNECT_BASE_URL_RETRYING - retrying.ansi
[31m[90mWe will try connecting to it 60 more times...[39m[31m[39m